--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
 		<title>Hank Quinlan, Horrible Cop</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -14,8 +17,8 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Pueblo Franco!</h1>
-				<p>I'm best known as a dj in cyprus music scene from <em>an early age</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Hank Quinlan!</h1>
+				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
@@ -26,7 +29,3 @@
 		</footer>
 	</body>
 </html>
-
-
-
-
