--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Iraklis Frangos!</h1>
-				<p>I'm best known as Pueblo Franco and i am djing for <em>over a decade</em> <a href="/about">Read more about my life...</a></p>
+				<p>I'm best known as Pueblo Franco and i am djing for <em>over a decade!</em> <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+        		<li><a href="mailto:pueblofranco@gmail.com">email</a></li>
         		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
