--- a/about.html
+++ b/about.html
@@ -1,7 +1,13 @@
 <html>
+  
+  <head>
+		<title>Pueblo Franco, Official page</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
 
-<p> ime kala </p>
+  <p> ime kala </p>
 
-<a href="/">Go Back</a>
+  <a href="/">Go Back</a>
 
 </html>
