--- a/about.html
+++ b/about.html
@@ -8,6 +8,6 @@
 
   <p> ime kala </p>
 
-  <a style="font-size: 4em;" href="/">Go Back</a>
+  <a style="font-size : 20em; color : blue;" href="/">Go Back</a>
 
 </html>
