--- a/about.html
+++ b/about.html
@@ -8,6 +8,12 @@
 
   <p> ime kala </p>
 
-  <a style="font-size : 20em; color : blue;" href="/">Go Back</a>
+  <br>
+  <br>
+  <br>
 
+  <div style="width:50px; margin:100 auto;">
+  	<a style="color : blue;" href="/">Go Back</a>
+  </div>
+  
 </html>
