--- a/about.html
+++ b/about.html
@@ -1,14 +1,20 @@
+<!DOCTYPE html>
 <html>
-  
-  <head>
+	
+  	<head>
 		<title>Pueblo Franco, Official page</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
+  	</head>
+  	
+  	<body>
+  		
+  		<p> ime kala </p>
+  		<footer>
+        		<a style="color : blue;" href="/">Go Back</a>
+        	</footer>
 
-  <p> ime kala </p>
-
-       <a style="color : blue;" href="/">Go Back</a>
+	</body>
   
   
 </html>
