--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
+		<p> to footer mou
+		</p>
+			
     		<ul>
-        		<li><a href="mailto:pueblofranco@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-			</ul>
+        		<li><a href="mailto:pueblofranco@gmail.com">my email</a></li>
+        		<li><a href="https://github.com/puebl0">my github</a></li>
+		</ul>
 		</footer>
 	</body>
 </html>
