--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 		</p>
 			
     		<ul>
-        		<li><a href="mailto:pueblofranco@gmail.com">my email</a></li>
-        		<li><a href="https://github.com/puebl0">my github</a></li>
+        		<li><a href="mailto:pueblofranco@gmail.com">email</a></li>
+        		<li><a href="https://github.com/puebl0">github</a></li>
+        		<li><a href="https://www.facebook.com/PuebloFranco?ref=hl">facebook</a></li>
+        		<li><a href=" https://www.mixcloud.com/iraklisfrangos/">mixcloud</a></li>
 		</ul>
 		</footer>
 	</body>
