--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Iraklis Frangos!</h1>
-				<p>I'm best known as Pueblo Franco and i am djing for <em>over a decade!</em> <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi, I'm Iraklis Frangos!</h1>
+				<p>Also known as Pueblo Franco and i am djing for <em>over a decade!</em> <a href="/about">Read more about my life...</a></p>
+    		                <p> " For me, it's all about mood and grooviness... playing those tracks that get you tapping your feet and nodding your head without you realizing it, regardless of genre, tempo, style, or realise date."</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-		<p> to footer mou
-		</p>
+		
 			
     		<ul>
         		<li><a href="mailto:pueblofranco@gmail.com">email</a></li>
