--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   	
   	<body>
   		
-  		<p> ime kala </p>
+  		<p> He grow up listening to sounds of funk, european electonica, synth-infused 80s music all which became infused with his own love for both hip hop and rock & roll music, Pueblo Franco ended up whith quite a mixed spectrum of musical influence. Today, this translates into sets, where he picks apart and combine together all the pieces of this music that he loves best. Having his base in Nicosia, Cyprus and djing for over a decade Pueblo Franco is no stranger to the ups-and-downs of the island music scene. </p>
   		<footer>
         		<a style="color : blue;" href="/">Go Back</a>
         	</footer>
