--- a/videoclips.html
+++ b/videoclips.html
@@ -7,3 +7,10 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
   	</head>
   	
+  	<body>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Dtx35r2f6yE" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/WITSMXWhWFQ" frameborder="0" allowfullscreen></iframe>
+  	        <footer>
+        		<a style="color : green;" href="/">Homepage</a>
+        	</footer>
+  	</body>
