--- a/videoclips.html
+++ b/videoclips.html
@@ -8,7 +8,9 @@
   	</head>
   	
   	<body>
+  		<h1>Summer Parties</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Dtx35r2f6yE" frameborder="0" allowfullscreen></iframe>
+                <h1>Pueblo Franco & Friends</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/WITSMXWhWFQ" frameborder="0" allowfullscreen></iframe>
   	        <footer>
         		<a style="color : green;" href="/">Homepage</a>
