--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+    <!-- Navigation menu -->
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
