added example post

--- a/index.html
+++ b/index.html
@@ -1,40 +1,8 @@
-
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Pueblo Franco, Official page</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-    <!-- Navigation menu -->
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about.html">About</a></li>
-        		<li><a href="/videoclips.html">Video Clips</a></li>
-        		<li><a href="/blog">Blog</a></li>
-        		
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi, I'm Iraklis Frangos!</h1>
-				<p>Also known as Pueblo Franco and i am djing for <em>over a decade!</em> <a href="/about">Read more about my life...</a></p>
-    		                <p> " For me, it's all about mood and grooviness... playing those tracks that get you tapping your feet and nodding your head without you realizing it, regardless of genre, tempo, style, or realise date."</p>
-    		               
-    		                <img width="800" height="250" src="http://city.sigmalive.com/sites/default/files/farmaprojekt2015_2.jpg">
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-		
-			
-    		<ul>
-        		<li><a href="mailto:pueblofranco@gmail.com">email</a></li>
-        		<li><a href="https://github.com/puebl0">github</a></li>
-        		<li><a href="https://www.facebook.com/PuebloFranco?ref=hl">facebook</a></li>
-        		<li><a href=" https://www.mixcloud.com/iraklisfrangos/">mixcloud</a></li>
-		</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Pueblo Franco, Official Site
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
