--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 layout: default
 title: Pueblo Franco, Official Site
 ---
-<div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+<div class="container">
+    		<div class="blurb">
+        		<h1>Hi, I'm Iraklis Frangos!</h1>
+				<p>Also known as Pueblo Franco and i am djing for <em>over a decade!</em> <a href="/about">Read more about my life...</a></p>
+    		                <p> " For me, it's all about mood and grooviness... playing those tracks that get you tapping your feet and nodding your head without you realizing it, regardless of genre, tempo, style, or realise date."</p>
+    		               
+    		                <img width="800" height="250" src="http://city.sigmalive.com/sites/default/files/farmaprojekt2015_2.jpg">
+    		</div><!-- /.blurb -->
+		
+
