--- a/videoclips.html
+++ b/videoclips.html
@@ -1,18 +1,9 @@
-<!DOCTYPE html>
-<html>
-	
-  	<head>
-		<title>Pueblo Franco, Official page</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-  	</head>
-  	
-  	<body>
+---
+layout: default
+title: Pueblo Franco, Video Clips
+---
   		<h1>Summer Parties</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Dtx35r2f6yE" frameborder="0" allowfullscreen></iframe>
                 <h1>Pueblo Franco & Friends</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/WITSMXWhWFQ" frameborder="0" allowfullscreen></iframe>
-  	        <footer>
-        		<a style="color : green;" href="/">Homepage</a>
-        	</footer>
-  	</body>
+
