--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Pueblo Franco, Official Site
+title: Pueblo Franco, Home
 ---
 <div class="container">
     		<div class="blurb">
